<resources>
    <string name="app_name">LezioneDue</string>
    <string name="uno">Uno</string>
    <string name="due">Due</string>
    <string name="tre">Tre</string>
    <string name="quattro">Quattro</string>
    <string name="cinque">Cinque</string>
    <string name="sei">Sei</string>
    <string name="title_activity_misure">Misure</string>
    <string name="click">click</string>

    <string name="esempio_testo">Esempio testo</string>
    <string name="altro_testo">Altro testo</string>

    <string name="nome_cognome">Nome: %s, Cognome: %s</string>
    <string name="cognome_nome">Cognome: %2$s, Nome: %1$s</string>
    <string name="numero">Numero: %f</string>

    <string name="stringa_html">Esempio con <b>bold</b> e <u>sottolineato</u></string>

    <string name="stringa_html_modificata">Altro html con &lt;b>bold&lt;/b> e &lt;u>sottolineato&lt;/u></string>

    <string name="stringa_html_modificata2"><![CDATA[Html usando cdata <b>bold</b> e <u>sottolineato</u>]]></string>
    <string name="spannable">spannable</string>

    <string name="testo_con_annotazione">Esempio di testo <annotation stile="importante">con sezione importante</annotation></string>
    <string name="button">Button</string>
    <string name="esempio_di_testo">Esempio di testo</string>
    <string name="testo_da_tradurre">Testo da tradurre</string>


    <string-array name="pianeti_elenco">
        <item>Mercurio</item>
        <item>Venere</item>
        <item>Terra</item>
        <item>Marte</item>
    </string-array>

    <plurals name="risultato_ricerca">
        <item quantity="one">Un risultato trovato.</item>
        <item quantity="other">%d risultati trovati.</item>
    </plurals>







</resources>
