<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:divider="@drawable/mio_divider"
    android:showDividers="middle"
    tools:context=".StringheActivity">


    <TextView
        android:id="@+id/testo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_font_stringhe"
        android:text="@string/esempio_testo" />

    <TextView
        android:id="@+id/testo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_font_stringhe"
        android:text="@string/esempio_testo" />

    <TextView
        android:id="@+id/testoHtml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_font_stringhe"
        android:text="@string/stringa_html" />

    <TextView
        android:id="@+id/testoHtmlModificata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_font_stringhe"
        android:text="@string/stringa_html_modificata" />

    <TextView
        android:id="@+id/spannableText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_font_stringhe"
        android:text="@string/spannable"
         />

    <TextView
        android:id="@+id/testoViaAnnotazione"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_font_stringhe"

        />
</LinearLayout>